--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,14 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Electric Games</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Electric Games</title>
+  <!-- Favicon usando .jpg -->
+  <link rel="icon" type="image/jpg" href="src/assets/electric-games.jpg" />
 </head>
 <body>
-<div id="root"></div>
-<script type="module" src="src/main.jsx"></script>
+  <div id="root"></div>
+  <script type="module" src="src/main.jsx"></script>
 </body>
 </html>
